--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.4",
     "js-cookie": "^3.0.5",
-    "yup": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-slick": "^0.29.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
